src/objects/FourPlanning_CoeCuenta__c.object
<CustomObject>
    <fields>
        <fullName>Creacion_del_valor__c</fullName>
        <label>Creacion del valor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FourPlanning CoeCuentas</relationshipLabel>
        <relationshipName>FourPlanning_CoeCuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valor_Coeficiente_De_Cuenta__c</fullName>
        <label>Valor Coeficiente de Cuenta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FourPlanning CoeCuenta</label>
    <nameField>
        <label>Nombre de FourPlanning CoeCuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning CoeCuentas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>